--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -161,7 +161,7 @@
     <string name="save_conexao">Smart Connect</string>
     <string name="compartilhar">Cuota</string>
     <string name="season_updated">Actualizado temporadas</string>
-    <string name="ops_seguir_novamente">Vaya. Algo salió mal. Si persiste, intente seguir la serie de nuevo.</string>
+    <string name="ops_seguir_novamente">Ops!. Algo salió mal. Si persiste, intente seguir la serie de nuevo.</string>
     <string name="title_marcar_ep_anteriores">Marcos episodios anteriores como se ve?</string>
     <string name="msg_marcar_ep_anteriores">Todos los episodios anteriores serán marcados como se ve.</string>
     <string name="nao_visto">No visto</string>
