refatorado fluxo de tvshow ate temporada

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -192,6 +192,7 @@
     <string name="purchase">Comprar</string>
     <string name="valid_us">Valid for USA</string>
     <string name="wiki">Wikipidia</string>
+    <string name="ep_nao_lancado">Epsode aún no lanzado</string>
 
 
 </resources>
