--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -107,6 +107,7 @@
     <string name="tvshow_add_favorite">Série adicionada aos Favoritos</string>
     <string name="filme_nao_lancado">Filme ainda não foi lançado</string>
     <string name="tvshow_nao_lancado">Série ainda não lançada</string>
+    <string name="ep_nao_lancado">Epsódio ainda não lançado</string>
     <string name="sem_tvshow">Sem Séries</string>
     <string name="producao">Produção</string>
     <string name="toast_salvar_imagem">Imagem salva na pasta do aplicativo.</string>
