--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -159,7 +159,7 @@
     <string name="empty">Vacía</string>
     <string name="save_conexao_summary">PopCorn Show reduce el uso de datos si usted está en una conexión lenta.</string>
     <string name="save_conexao">Smart Connect</string>
-    <string name="compartilhar">Cuota</string>
+    <string name="compartilhar">Cuota %s</string>
     <string name="season_updated">Actualizado temporadas</string>
     <string name="ops_seguir_novamente">Ops!. Algo salió mal. Si persiste, intente seguir la serie de nuevo.</string>
     <string name="title_marcar_ep_anteriores">Marcos episodios anteriores como se ve?</string>
