--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -179,7 +179,7 @@
     <string name="empty">Vazio</string>
     <string name="save_conexao_summary">PopCorn Show reduz seu uso dados caso esteja em uma conexão lenta.</string>
     <string name="save_conexao">Conexão inteligente</string>
-    <string name="compartilhar">Compartilhar</string>
+    <string name="compartilhar">Compartilhar %s</string>
     <string name="season_updated">Temporada Atualizada</string>
     <string name="ops_seguir_novamente">Ops. Algo deu errado. Se persistir, tente seguir a série novamente.</string>
     <string name="title_marcar_ep_anteriores">Marcar episódios anteriores como assistidos?</string>
