--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,7 +181,7 @@
     <string name="empty">Empty</string>
     <string name="save_conexao_summary">PopCorn Show reduces your data usage if you are on a slow connection.</string>
     <string name="save_conexao">Smart connection</string>
-    <string name="compartilhar">To share</string>
+    <string name="compartilhar">To share %s</string>
     <string name="season_updated">Season Updated</string>
     <string name="ops_seguir_novamente">Ops. Something went wrong. If it persists, try to follow the Tvshow again.</string>
     <string name="title_marcar_ep_anteriores">Mark previous episodes as seen?</string>
