--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="no_vote">No Vote</string>
     <string name="nota">Note:</string>
     <string name="now_playing">Now Playing</string>
-    <string name="nao_informado" translatable="false">N/A</string>
+    <string name="nao_informado" translatable="false">-/-/-</string>
     <string name="orcamento_budget">Budget</string>
     <string name="original_title">Original title:</string>
     <string name="oscar">Oscar Winners</string>
