--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -176,7 +176,7 @@
     <string name="msg_spoiler">Esses links podem conter SPOILERS</string>
     <string name="empty_favorites">Sem Favoritos</string>
     <string name="empty_rated">Sem classificados</string>
-    <string name="empty">Vazio</string>
+    <string name="empty">Ainda não tem nada!</string>
     <string name="save_conexao_summary">PopCorn Show reduz seu uso dados caso esteja em uma conexão lenta.</string>
     <string name="save_conexao">Conexão inteligente</string>
     <string name="compartilhar">Compartilhar %s</string>
