criado log do objeto da chamada
criado log para objeto das chamadas

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -76,7 +76,7 @@
     <string name="notificacao">Notificación</string>
     <string name="notificacao_summary">Obtener la notificación</string>
     <string name="nova_senha">Nueva Contraseña</string>
-    <string name="novidades_text">** Ahora puedes saber dónde mirar esa película **\n\n Calidad de imagen mejorada \n\n Algunos (solo algunos) corrigen errores \n\n Componentes actualizados **</string>
+    <string name="novidades_text">** Se ve igual pero por dentro… ¡rápido!</string>
     <string name="novidades_title">Noticias</string>
     <string name="now_playing">Jugando ahora</string>
     <string name="ops">Oops! algo mal</string>
