--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -169,7 +169,7 @@
     <string name="notificacao_summary">Receber Notificação</string>
     <string name="ajuda_desenvolvimento">Desenvolvimento</string>
     <string name="novidades_title">Novidades</string>
-    <string name="novidades_text">** Agora vocẽ pode saber ontem assistir o filme ** \n\n Qualidade das imagem melhorada \n\n Alguns (só alguns) bugs arrumados \n\n Componentes atualizados</string>
+    <string name="novidades_text">** A carcaça ta quase igual mas por baixo, quanta mudança. Rapido!</string>
     <string name="person">Perfil</string>
     <string name="populares">Populares</string>
     <string name="alerta_spoiler">Atenção</string>
