fix string em stream tv

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -193,6 +193,7 @@
     <string name="valid_us">Valid for USA</string>
     <string name="wiki">Wikipidia</string>
     <string name="ep_nao_lancado">Epsode aún no lanzado</string>
+    <string name="more_details_tv_stream">Ver más en detalles de la temporada</string>
 
 
 </resources>
