--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -209,5 +209,6 @@
     <string name="purchase">Comprar</string>
     <string name="valid_us">Válido para USA</string>
     <string name="wiki">Wikipidia</string>
+    <string name="more_details_tv_stream">Veja mais nos detalhes da temporada</string>
 
 </resources>
