--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -235,6 +235,7 @@
     <string name="valid_us">Valid for USA</string>
     <string name="wiki">Wikipidia</string>
     <string name="ep_nao_lancado">Epsode not yet released</string>
+    <string name="more_details_tv_stream">See more in the details of the season</string>
 
 
 </resources>
